--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "better-sqlite3": "^5.4.3",
     "pdf-parse": "^1.1.1"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^5.4.0",
     "@types/node": "^13.7.1"
   }
 }
