--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "main": "index.js",
   "scripts": {
     "start": "tsc && node build/main.js",
+    "serve": "tsc && node build/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.2",
     "better-sqlite3": "^5.4.3",
+    "express": "^4.17.1",
     "pdf-parse": "^1.1.1"
   },
   "devDependencies": {
