--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,12 @@
 {
   "compilerOptions": {
+    "outDir": "./build",
+    "rootDir": "./src",
     "target": "es5",
     "module": "commonjs",
-    "outDir": "./build",
-    "rootDir": "./",
     "strict": true,
-    "forceConsistentCasingInFileNames": true
-  }
+    "forceConsistentCasingInFileNames": true,
+    "esModuleInterop": true
+  },
+  "exclude": ["client"]
 }
