--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
+    "query-string": "^6.11.0",
     "ra-data-json-server": "^3.2.3",
     "react": "^16.12.0",
     "react-admin": "^3.2.3",
