--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/cors": "^2.8.6",
     "@types/express": "^4.17.2",
     "better-sqlite3": "^5.4.3",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "pdf-parse": "^1.1.1"
   },
