--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
-  "name": "monotax",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "tsc && node build/main.js",
-    "serve": "tsc && node build/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@types/cors": "^2.8.6",
-    "@types/express": "^4.17.2",
-    "better-sqlite3": "^5.4.3",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "pdf-parse": "^1.1.1"
-  },
-  "devDependencies": {
-    "@types/better-sqlite3": "^5.4.0",
-    "@types/node": "^13.7.1"
-  }
+	"name": "monotax",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"parse": "tsc && node build/parse.js",
+		"server": "nodemon --exec ts-node --files src/server.ts",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"keywords": [],
+	"author": "Iván Ovejero",
+	"license": "MIT",
+	"dependencies": {
+		"@types/cors": "^2.8.6",
+		"@types/express": "^4.17.2",
+		"better-sqlite3": "^5.4.3",
+		"cors": "^2.8.5",
+		"express": "^4.17.1",
+		"pdf-parse": "^1.1.1"
+	},
+	"devDependencies": {
+		"@types/better-sqlite3": "^5.4.0",
+		"@types/node": "^13.7.1"
+	}
 }
