--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
 		"@testing-library/user-event": "^7.2.1",
 		"@types/react-router-dom": "^5.1.3",
 		"chartist": "^0.11.4",
+		"history": "^4.10.1",
 		"query-string": "^6.11.0",
 		"react": "^16.12.0",
 		"react-admin": "^3.2.3",
