--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,8 @@
 {
 	"files.exclude": {
-		".gitignore": true,
+		// ".gitignore": true,
 		"client/src/serviceWorker.js": true,
 		"client/src/setupTests.js": true,
-		// "client/src/custom.d.ts": true,
 		"node_modules": true,
 		"client/node_modules": true,
 		"client/.gitignore": true,
