--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,11 @@
 {
 	"files.exclude": {
 		// ".gitignore": true,
+		// "client/.gitignore": true,
 		"client/src/serviceWorker.js": true,
 		"client/src/setupTests.js": true,
 		"node_modules": true,
 		"client/node_modules": true,
-		"client/.gitignore": true,
 		"build": true
 	},
 	"search.exclude": {
